@@ -3,8 +3,13 @@ package ru.yandex.practicum.filmorate.storage.review;
 import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.model.Review;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 @Component
 public class InMemoryReviewStorage implements ReviewStorage {
@@ -18,7 +23,7 @@ public class InMemoryReviewStorage implements ReviewStorage {
                 .filter(review -> filmId == null || review.getFilmId().equals(filmId))
                 .sorted(Comparator.comparingInt(Review::getUseful).reversed())
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
